security bug fixes